tests/loops/valid/continue_empty_post.su
s32 main() {
    s32 sum = 0;
    for (s32 i = 0; i < 10;) {
        i = i + 1;
        if (i % 2)
            continue;
        sum = sum + i;
    }
    return sum;
}