tests/loops/invalid/syntax_err_statement_in_condition.su
s32 main() {
    while(s32 a) {
        2;
    }
}